# test_useful_tools

./: .pre-commit-config.yaml  README.md  commitcanvas_plugins.py  plug.py  pyproject.toml  test.py
.github/workflows/: python-app.yml
model/: trained_model.pkl
src/: collect.py  demo.py
