[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["bagashvilit <bagashvilit@allegheny.edu>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0.0"
commitcanvas = { git = "https://github.com/CommittedTeam/CommitCanvas", rev = "83650042c5469c11b5af299eff6a63cf9e358cbe"}
joblib = "^1.1.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
