[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["bagashvilit <bagashvilit@allegheny.edu>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0.0"
commitcanvas = { git = "https://github.com/CommittedTeam/CommitCanvas", rev = "5dd185dcc7f5bc7323403e8d8e32ba4bc099794f"}
joblib = "^1.1.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
