[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["bagashvilit <bagashvilit@allegheny.edu>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0.0"
joblib = "^1.2.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
